<resources>
    <string name="app_name">반쪽</string>
    <string name="sign_up">회원가입</string>
    <string name="necessary_list">모든 항목 필수 입력</string>
    <string name="id">아이디(이메일)</string>
    <string name="partner_id">상대방 아이디(이메일)</string>
    <string name="pwd">비밀번호 입력</string>
    <string name="chk_pwd">비밀번호 확인</string>
    <string name="warning_pwd_6">*비밀번호는 6자리 이상 입력해야 합니다.*</string>
    <string name="warning_no_same_pwd">비밀번호가 일치하지 않습니다.</string>
    <string name="nickname">닉네임(이름)</string>
    <string name="birth">생년월일</string>
    <string name="phone_num">핸드폰번호</string>
    <string name="partner_phone_num">상대방 핸드폰번호</string>
    <string name="sex">성별</string>
    <string name="search_info">아이디/비밀번호 찾기</string>
    <string name="search_id">아이디 찾기</string>
    <string name="you_id">당신의 아이디는</string>
    <string name="search_pwd">비밀번호 찾기</string>
    <string name="resetting_pwd">비밀번호 재설정</string>
    <string name="connect_partner">반쪽 연결</string>
    <string name="menu">메뉴</string>
    <string name="setting">설정</string>
    <string name="privacy">정보 보호</string>
    <string name="lock_pwd">암호 잠금</string>
    <string name="set_pwd">암호 설정</string>
    <string name="change_pwd">암호 변경</string>
    <string name="background_set">배경 설정</string>
    <string name="background_color_set">테마 설정</string>
    <string name="backscreen_set">배경화면 설정</string>
    <string name="my_info">내 정보</string>
    <string name="disconnect">상대방과 연결 끊기</string>
    <string name="diary">다이어리</string>
    <string name="diary_write">다이어리 작성</string>
    <string name="diary_none">등록된 내용이 없습니다.</string>
    <string name="festival">축제일정</string>
</resources>