<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/intro_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_area"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back_white" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/search_pwd"
                    android:textColor="@color/White"
                    android:textSize="13dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round"
                android:gravity="center"
                android:hint="@string/id"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/Bold_Gray"
                android:textColorHint="@color/Bold_Gray"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round"
                android:gravity="center"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/Bold_Gray"
                android:textColorHint="@color/Bold_Gray"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round"
                android:gravity="center"
                android:hint="@string/phone_num"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/Bold_Gray"
                android:textColorHint="@color/Bold_Gray"
                android:textSize="15dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn_search_pwd"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:background="@drawable/selector_btn_search_pwd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chan_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetting_pwd"
                android:textColor="@color/Bold_Gray"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/Bold_Gray"
                android:textColorHint="@color/Bold_Gray"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round"
                android:hint="@string/chk_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/Bold_Gray"
                android:textColorHint="@color/Bold_Gray"
                android:textSize="15dp" />

            <ImageButton
                android:id="@+id/btn_chan_pwd"
                android:layout_width="120dp"
                android:layout_height="43dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_btn_chan_pwd" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>