<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/intro_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_area"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back_white" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/search_id"
                    android:textColor="@color/White"
                    android:textSize="13dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/corner_round"
                android:gravity="center"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/Bold_Gray"
                android:textColorHint="@color/Bold_Gray"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_birth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corner_round"
                android:text="@string/birth"
                android:textColor="@color/Bold_Gray"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corner_round"
                android:gravity="center"
                android:hint="@string/phone_num"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/Bold_Gray"
                android:textColorHint="@color/Bold_Gray"
                android:textSize="15dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="20dp">

            <ImageButton
                android:id="@+id/btn_search_id"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:background="@drawable/selector_btn_search_id" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/find_user_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_id"
                android:textColor="@color/White"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/txt_find_user_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/Bold_Gray"
                android:background="@drawable/corner_round" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
